# scop

./: CMakeLists.txt  Dependency.cmake
shader/: lighting.fs  lighting.vs  per_vertex_color.fs  per_vertex_color.vs  simple.fs  simple.vs  texture.fs  texture.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  parse.cpp  parse.h  program.cpp  program.h  shader.cpp  shader.h  test.cpp  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
src/glm/: compute_vector_relational.hpp  glm.cpp  glm.hpp  mat2x2.cpp  mat2x2.hpp  mat3x3.cpp  mat3x3.hpp  mat4x4.cpp  mat4x4.hpp  type_ptr.cpp  type_ptr.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
